--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/purple-green.css";
+body {
+  background-image: url(./assets/images/diagonal_waves.png);
+}
+.mat-content {
+  justify-content: space-between;
+}
+
+.mat-content > mat-panel-title, .mat-content > mat-panel-description {
+flex: 1;
+}
+.mat-form-field {
+  width: 400px !important;
+}
+.mat-focused .mat-form-field-label {
+  color: black !important;
+}
+.mat-form-field-ripple {
+ background-color: rgb(12, 11, 11) !important;;
+}
+.mat-form-field.ng-touched.ng-invalid .mat-form-field-label {
+  color: rgba(255, 162, 162, 0.897) !important;
+}
+.mat-form-field.ng-touched.ng-invalid .mat-form-field-ripple {
+  background-color: rgba(255, 162, 162, 0.897) !important;
+}
+.mat-datepicker-content {
+  background:  rgb(18, 122, 117);
+}
+.mat-select-panel {
+  background:  rgb(18, 122, 117);
+}
+
+
