--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,6 +1,6 @@
 <div class="flex-grid">                
     
-    <summary id="left">
+    <summary class="button-container" id="left">
         <mat-toolbar>Family Info</mat-toolbar>
         <mat-card >
             Family Name: 
@@ -10,11 +10,9 @@
         <mat-card *ngIf="family.schoolChildren !== 0">{{'School Children: ' + family.schoolChildren}}</mat-card>
         <mat-card>
             Choice Points:
-            <div>
-                {{ remainingPoints + ' / ' + maxPoints}}
-            </div>
+            <div>{{ remainingPoints + ' / ' + maxPoints}}</div>
         </mat-card>
-        <button id="familyButton" mat-raised-button color (click)="onBackToFamilyClick()">Back to Family</button>
+        <button mat-raised-button color (click)="onBackToFamilyClick()">Back to Family</button>
     </summary>    
     
     <main id="middle">
@@ -24,9 +22,9 @@
         <app-choice-product (pointEmitter)="receivePoints($event)"></app-choice-product>  
     </main>
     
-    <nav id="right">
+    <nav class="button-container">
         <mat-toolbar>Ready to Place Order?</mat-toolbar> 
-        <button id="cartButton" mat-raised-button (click)="onReviewCartClick()">Review Cart</button>
+        <button mat-raised-button (click)="onReviewCartClick()">Review Cart</button>
     </nav>  
 
 </div>
