--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -4,13 +4,14 @@
     margin: 5%;
     background: blue;
     top: 7%;
+    min-width: 500px;
 }
 .mat-card {
     background: rgb(43, 126, 235);
 }
 .cart-sub-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 button {
     width: auto;
@@ -21,14 +22,8 @@ button {
     margin-top: auto;
     margin-bottom: 2%;
 }
-table {
-    width: 100%;
+.form-container {
+    margin: 1%;
+    top: 20;
 }
-.name {
-    width: 200px;
-    margin-right: 15%;
-    /* min-width: 150px;  */
-}
-.amount {
-    width: 50px;
-}
+
