--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,29 +1,34 @@
 <div class="flex-container">  
   
-  <div class="back-container">
+  <div class="button-container">
       <mat-toolbar>Change Items?</mat-toolbar>
-      <button mat-raised-button (click)="onBackToCart()">Back to Cart</button>
+      <mat-card>
+          <button mat-raised-button (click)="onBackToCart()">Back to Cart</button>
+      </mat-card>
   </div>
 
   <div class="cart-container">
     <mat-toolbar>Cart Overview</mat-toolbar>
     <mat-card class="cart-sub-container">
-      <mat-card *ngIf="bulkItems.length">
+      <mat-card *ngIf="bulkItems.length"  class="form-container">
+        <mat-toolbar>Dairy, Produce, and Meat</mat-toolbar>
         <table mat-table [dataSource]='bulkItems'>
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
-          <tr mat-header-row *matHeaderRowDef="produceColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: produceColumns;"></tr>  
+          <ng-container matColumnDef="amount">
+              <th mat-header-cell *matHeaderCellDef> Amount </th>
+              <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+            </ng-container>
+          <tr mat-header-row *matHeaderRowDef="bulkColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: bulkColumns;"></tr>  
         </table>
       </mat-card>
 
-      <mat-card>Dairy</mat-card>
-      <mat-card>Meat</mat-card>
-
-      <mat-card *ngIf="afterSchoolItems.length">
-        <table mat-table [dataSource]='afterSchoolItems'>
+      <mat-card *ngIf="afterSchoolItems.length" class="form-container">
+        <mat-toolbar>After School Items</mat-toolbar>
+        <table mat-table [dataSource]='afterSchoolItems' >
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -32,34 +37,37 @@
             <th mat-header-cell *matHeaderCellDef> Amount </th>
             <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
           </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>  
+          <tr mat-header-row *matHeaderRowDef="afterSchoolColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: afterSchoolColumns;"></tr>  
         </table>
       </mat-card>
 
-      <mat-card *ngIf="choiceItems.length"> 
+      <mat-card *ngIf="choiceItems.length" class="form-container">
+        <mat-toolbar>Choice Items</mat-toolbar> 
         <table mat-table [dataSource]='choiceItems'>
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
           <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef> Amount </th>
             <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
           </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns3"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns3;"></tr>  
+          <tr mat-header-row *matHeaderRowDef="choiceColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: choiceColumns;"></tr>  
         </table>    
       </mat-card>
     </mat-card>
   </div>  
 
-  <div class="submit-container">
+  <div class="button-container">
     <mat-toolbar>Place Order</mat-toolbar>
-    <mat-select required>
-      <mat-label>Something here</mat-label>
-      <mat-option [value]="pickUpDate">Whenever</mat-option>
-    </mat-select>
-    <button mat-raised-button (click)="onSubmitOrder()">Submit Order</button>
+    <mat-card>
+      <mat-select required>
+        <mat-label>Something here</mat-label>
+        <mat-option [value]="pickUpDate">Whenever</mat-option>
+      </mat-select>
+      <button mat-raised-button (click)="onSubmitOrder()">Submit Order</button>
+    </mat-card>  
   </div> 
 </div>   
