--- a/src/app/components/after-school-product/after-school-product.component.html
+++ b/src/app/components/after-school-product/after-school-product.component.html
@@ -1,12 +1,10 @@
 <mat-expansion-panel (opened) ="panelOpenState = true" (closed)="panelOpenState = false">
+  
   <mat-expansion-panel-header>
-      <mat-panel-title>
-        After School Items
-      </mat-panel-title>
-      <mat-panel-description>
-        {{panelOpenState ? 'close' : 'open'}}
-      </mat-panel-description>
-    </mat-expansion-panel-header>  
+    <mat-panel-title>After School Items</mat-panel-title>
+    <mat-panel-description>{{panelOpenState ? 'close' : 'open'}}</mat-panel-description>
+  </mat-expansion-panel-header>  
+  
   <mat-card *ngFor="let afterSchoolProduct of afterSchoolProducts">
     <mat-card-header>      
       <mat-card-title>{{afterSchoolProduct.name}}</mat-card-title>
@@ -20,4 +18,5 @@
       </mat-card-content>
     </mat-card-header>
   </mat-card>
+
 </mat-expansion-panel>
