added auth service, auth guard, family guard, callback component, navbar component, reload warning, and related modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <span>
         Broad Street Food Pantry
     </span>
+    <app-navbar></app-navbar>
+    <app-login></app-login>
     <button mat-button>About</button>
     <button mat-button>Contact</button>
 </mat-toolbar>
