--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -18,6 +18,7 @@
     <main id="middle">
         <mat-toolbar>Click Below to Shop</mat-toolbar>
         <app-bulk-product></app-bulk-product>
+        <app-meat-product></app-meat-product>
         <app-after-school-product *ngIf="family.schoolChildren !== 0"></app-after-school-product>
         <app-choice-product (pointEmitter)="receivePoints($event)"></app-choice-product>  
     </main>
