--- a/src/app/components/bulk-product/bulk-product.component.html
+++ b/src/app/components/bulk-product/bulk-product.component.html
@@ -10,8 +10,11 @@
   <mat-card *ngFor="let bulkProduct of bulkProducts" class="card-container">
     <mat-card-header>
       <mat-card-title>{{bulkProduct.name}}</mat-card-title>
-      <div>{{isProductInCart(bulkProduct) ? getProductAmountType(bulkProduct) : 'None in Cart'}}</div>
-      <mat-checkbox  (change)="updateBulkCart(bulkProduct)" [checked]="isProductInCart(bulkProduct)"></mat-checkbox>
+      <div>{{isProductInCart(bulkProduct) ? getProductAmountType(bulkProduct) + ' in Cart' : 'None in Cart'}}</div>
+      <mat-checkbox  (change)="updateBulkCart(bulkProduct)" 
+        [checked]="isProductInCart(bulkProduct)" labelPosition="before">
+        Include
+    </mat-checkbox>
     </mat-card-header>
   </mat-card>
 </mat-expansion-panel>
