--- a/src/app/components/meat-product/meat-product.component.css
+++ b/src/app/components/meat-product/meat-product.component.css
@@ -3,6 +3,26 @@
     margin: 2%;
     border: solid black .5px;
   }
+  #overlay-container {
+    position: relative;
+  }
+  #overlay {
+    background-color: rgb(0,0,0,.9);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #info {
+    background:  rgb(158, 13, 49);
+  }
+  #checkbox {
+    text-align: center;
+  }
   .mat-card {
     background: rgb(12, 36, 100);
     margin-top: 1em;
@@ -10,5 +30,9 @@
   }
   .mat-card-header {
     display: grid; 
-    grid-template-columns: 49% auto 5%;
+    grid-template-columns: 35% 65%;
+  }
+  .mat-radio-group {
+    display: flex;
+    justify-content: space-between;
   }
