--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -18,10 +18,11 @@
     <main id="middle">
         <mat-toolbar>Click Below to Shop</mat-toolbar>
         <app-after-school-product [family]="family" *ngIf="family.schoolChildren !== 0"></app-after-school-product>
-        <app-bulk-product [family]="family"></app-bulk-product>
+        <app-bulk-product></app-bulk-product>
         <app-choice-product [family]="family" (pointEmitter)="receivePoints($event)"></app-choice-product> 
         <app-dairy-product [family]="family"></app-dairy-product>
-        <app-meat-product [family]="family"></app-meat-product>     
+        <app-meat-product [family]="family"></app-meat-product>
+        <app-recipe></app-recipe>     
     </main>
     
     <nav class="button-container">
