--- a/src/app/components/shop/shop.component.css
+++ b/src/app/components/shop/shop.component.css
@@ -27,6 +27,9 @@
     background: rgb(160, 6, 160);
     margin: 5%;
 }
+#right {
+    height: 125px;
+}
 #middle {
     display: flex;
     flex-direction: column;
