--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -25,7 +25,7 @@
         <app-recipe></app-recipe>     
     </main>
     
-    <nav class="button-container">
+    <nav class="button-container" id="right">
         <mat-toolbar>Ready to Place Order?</mat-toolbar> 
         <button mat-raised-button (click)="onReviewCartClick()">Review Cart</button>
     </nav>  
