--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,80 +1,157 @@
-<div id="flex-container">  
-  
+<div id="grid-container">  
   
   <div class="button-container">
     <mat-toolbar>Change Items?</mat-toolbar>
     <button mat-raised-button (click)="onBackToCart()">Back to Shop</button>
   </div>
-  
 
-  <div id="cart-container">
+  <mat-card id="empty-cart" *ngIf="!cart.categoryItems.length">
+    Cart is empty!<br><br>
+    To place an order, please press "back to shop" and add items to the cart.
+  </mat-card>
+  
+  <div id="cart-container" *ngIf="cart.categoryItems.length">
 
     <mat-toolbar>Cart Overview</mat-toolbar>
-    <mat-card id="cart-sub-container">
-    <mat-card id="empty-cart" *ngIf="!cart.categoryItems.length">Nothing in Cart!</mat-card>
-      <div *ngIf="bulkItems.length"  class="form-container">
-        <mat-toolbar class="items-toolbar">Dairy, Produce, and Meat</mat-toolbar>
-        <mat-card class="items-card">
-          <table mat-table [dataSource]='bulkItems'>
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Amount </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
-              </ng-container>
-            <tr mat-header-row *matHeaderRowDef="bulkColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: bulkColumns;"></tr>  
-          </table>
-        </mat-card>
-      </div>  
-
-      <div *ngIf="afterSchoolItems.length" class="form-container">
-          <mat-toolbar class="items-toolbar">After School Items</mat-toolbar>
-          <mat-card class="items-card">
-            <table mat-table [dataSource]='afterSchoolItems' >
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-              </ng-container>
-              <ng-container matColumnDef="amount" class="amount">
-                <th mat-header-cell *matHeaderCellDef> Amount </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef="afterSchoolColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: afterSchoolColumns;"></tr>  
-            </table>
-          </mat-card>  
-      </div>
-
-      <div *ngIf="choiceItems.length">
-        <mat-toolbar class="items-toolbar">Choice Items</mat-toolbar>
-        <mat-card class="items-card"> 
-          <table mat-table [dataSource]='choiceItems'>
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef class="name"> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="amount">
-              <th mat-header-cell *matHeaderCellDef> Amount </th>
-              <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="choiceColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: choiceColumns;"></tr>  
-          </table>    
-        </mat-card>
-      </div>
-    </mat-card>  
-  </div>  
     
-  <div class="button-container">
-      <mat-toolbar>Place Order?</mat-toolbar>
-    <button mat-raised-button (click)="onSubmitOrder()">Submit Order</button>
-  </div>  
+    <cdk-virtual-scroll-viewport  [itemSize]="">
+
+      <mat-card class="order top">Please scroll down to view order</mat-card>
+     
+      <ng-container *ngIf="viewItems.afterSchool">
+        <mat-toolbar class="items-toolbar top-table">After School Items</mat-toolbar>
+        <table mat-table [dataSource]="viewItems.afterSchool">
+          <ng-container matColumnDef="column1">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-footer-cell *matFooterCellDef>Total After School Items:</td>
+          </ng-container>
+          <ng-container matColumnDef="column2">
+            <th mat-header-cell *matHeaderCellDef>Amount</th>
+            <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+            <td mat-footer-cell *matFooterCellDef>{{totals.afterSchool}}</td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columns"></tr>
+          <tr mat-row *matRowDef="let row; columns: columns"></tr>
+          <tr mat-footer-row *matFooterRowDef="columns"></tr>   
+        </table>
+        <div class="items-toolbar bottom-table"></div>
+      </ng-container>
+
+      <ng-container *ngIf="viewItems.bulk">
+        <mat-toolbar class="items-toolbar top-table">Bread and Produce</mat-toolbar>
+        <table mat-table [dataSource]="viewItems.bulk">
+          <ng-container matColumnDef="column1">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-footer-cell *matFooterCellDef>Total Bread and Produce Items:</td>
+          </ng-container>
+          <ng-container matColumnDef="column2">
+            <th mat-header-cell *matHeaderCellDef>Amount</th>
+            <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+            <td mat-footer-cell *matFooterCellDef>{{totals.bulk}}</td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columns"></tr>
+          <tr mat-row *matRowDef="let row; columns: columns"></tr>
+          <tr mat-footer-row *matFooterRowDef="columns"></tr>  
+        </table>
+        <div class="items-toolbar bottom-table"></div>
+      </ng-container>
+
+      <ng-container *ngIf="viewItems.choice">
+        <mat-toolbar class="items-toolbar top-table">Choice Items</mat-toolbar>
+        <table mat-table [dataSource]="viewItems.choice">
+          <ng-container matColumnDef="column1">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-footer-cell *matFooterCellDef>Total Choice Items:</td>
+          </ng-container>
+          <ng-container matColumnDef="column2">
+            <th mat-header-cell *matHeaderCellDef>Amount</th>
+            <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+            <td mat-footer-cell *matFooterCellDef>{{totals.choice}}</td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columns"></tr>
+          <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+          <tr mat-footer-row *matFooterRowDef="columns"></tr>   
+        </table>
+        <div class="items-toolbar bottom-table"></div> 
+      </ng-container>
+
+      <ng-container *ngIf="viewItems.dairy">
+        <mat-toolbar class="items-toolbar top-table">Dairy</mat-toolbar>
+        <table mat-table [dataSource]="viewItems.dairy" >
+          <ng-container matColumnDef="column1">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-footer-cell *matFooterCellDef>Total Dairy Items:</td>
+          </ng-container>
+          <ng-container matColumnDef="column2">
+            <th mat-header-cell *matHeaderCellDef>Amount</th>
+            <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+            <td mat-footer-cell *matFooterCellDef>{{totals.dairy}}</td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columns"></tr>
+          <tr mat-row *matRowDef="let row; columns: columns"></tr>
+          <tr mat-footer-row *matFooterRowDef="columns"></tr>  
+        </table>
+        <div class="items-toolbar bottom-table"></div>
+      </ng-container>
+
+      <ng-container *ngIf="viewItems.meat">
+          <mat-toolbar class="items-toolbar top-table">Meat</mat-toolbar>
+          <table mat-table [dataSource]="viewItems.meat">
+            <ng-container matColumnDef="column1">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let element">{{element.name}}</td>
+              <td mat-footer-cell *matFooterCellDef>Total Meat Amount:</td>
+            </ng-container>
+            <ng-container matColumnDef="column2">
+              <th mat-header-cell *matHeaderCellDef>Preference</th>
+              <td mat-cell *matCellDef="let element">{{element.preference}}</td>
+              <td mat-footer-cell *matFooterCellDef>{{totals.meat + ' Pounds'}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columns"></tr>
+            <tr mat-row *matRowDef="let row; columns: columns"></tr>
+            <tr mat-footer-row *matFooterRowDef="columns"></tr>  
+          </table>
+          <div class="items-toolbar bottom-table"></div> 
+        </ng-container>
+
+        <ng-container *ngIf="viewItems.recipe">
+          <mat-toolbar class="items-toolbar top-table">Recipe</mat-toolbar>
+          <table mat-table [dataSource]="viewItems.recipe">
+            <ng-container matColumnDef="column1">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let element">{{element.name}}</td>
+              <td mat-footer-cell *matFooterCellDef>Total Recipe Starters:</td>
+            </ng-container>
+            <ng-container matColumnDef="column2">
+              <th mat-header-cell *matHeaderCellDef>Amount</th>
+              <td mat-cell *matCellDef="let element">{{totals.recipe}}</td>
+              <td mat-footer-cell *matFooterCellDef>{{totals.recipe}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="columns"></tr>
+            <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="columns"></tr>   
+          </table>
+          <div class="items-toolbar bottom-table"></div> 
+        </ng-container>
+
+      <mat-card *ngIf="cart.categoryItems.length" class="order bottom">End of order</mat-card>  
+
+      </cdk-virtual-scroll-viewport>  
+    </div>
+  
+    
+    <div class="button-container" *ngIf=cart.categoryItems.length>
+        <mat-toolbar>Place Order?</mat-toolbar>
+      <button mat-raised-button (click)="onSubmitOrder()">Submit Order</button>
+    </div>
+
+</div>  
 
 
-</div> 
 
 <mat-select required>
   <mat-label>Something here</mat-label>
