added shop virtual scrolling; moved products subscribe calls to component (except bulk); some clean up

--- a/src/app/components/after-school-product/after-school-product.component.css
+++ b/src/app/components/after-school-product/after-school-product.component.css
@@ -22,7 +22,12 @@
   display: flex;
   justify-content: space-between;
 }
-button {
+.mat-action-row {
+  border-top: 0;
+  cursor: pointer;
+  justify-content: center;
+}
+.mat-button {
   background-color: goldenrod;
   height: auto;
   width: 75%;
