--- a/src/app/components/after-school-product/after-school-product.component.html
+++ b/src/app/components/after-school-product/after-school-product.component.html
@@ -1,4 +1,5 @@
-<mat-expansion-panel (opened) ="panelOpenState = true" (closed)="panelOpenState = false">
+<mat-expansion-panel [expanded]="panelOpenState" 
+(opened)="panelOpenState = true" (closed)="panelOpenState = false">
   
   <mat-expansion-panel-header>
     <mat-panel-title>After School Items</mat-panel-title>
@@ -18,5 +19,6 @@
       </mat-card-content>
     </mat-card-header>
   </mat-card>
+  <mat-action-row (click)="closePanel()">{{panelOpenState ? 'close' : 'open'}}</mat-action-row>
 
 </mat-expansion-panel>
