--- a/src/app/components/bulk-product/bulk-product.component.html
+++ b/src/app/components/bulk-product/bulk-product.component.html
@@ -1,7 +1,7 @@
-<mat-expansion-panel (opened) ="panelOpenState = true" (closed)="panelOpenState = false">
+<mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
   <mat-expansion-panel-header>
       <mat-panel-title>
-        Bread and Produce
+        Bread, Meal Starter, and Produce
       </mat-panel-title>
       <mat-panel-description>
          {{panelOpenState ? 'close' : 'open'}}
