--- a/src/app/components/choice-product/choice-product.component.css
+++ b/src/app/components/choice-product/choice-product.component.css
@@ -22,6 +22,11 @@
     display: flex;
     justify-content: space-between;
   }
+  .mat-action-row {
+    border-top: 0;
+    cursor: pointer;
+    justify-content: center;
+  }
   button {
     background-color: goldenrod;
     height: auto;
