--- a/src/app/components/meat-product/meat-product.component.css
+++ b/src/app/components/meat-product/meat-product.component.css
@@ -36,3 +36,8 @@
     display: flex;
     justify-content: space-between;
   }
+  .mat-action-row {
+    border-top: 0;
+    cursor: pointer;
+    justify-content: center;
+  }
