--- a/src/app/components/shop/shop.component.css
+++ b/src/app/components/shop/shop.component.css
@@ -1,6 +1,7 @@
 .flex-grid {
     margin: 5%;
-    margin-top: 7%;
+    margin-top: 6%;
+    margin-bottom: 0;
     display: flex;
     justify-content: space-between;
 }
@@ -12,8 +13,6 @@
     justify-content: center;
 }
 .button-container {
-    position: sticky;
-    top: 95px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -31,13 +30,21 @@
     height: 125px;
 }
 #middle {
-    display: flex;
-    flex-direction: column;
-    width: 55%;
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: space-around; */
+    /* width: 55%; */
     background: rgba(33, 38, 39, 0.7);
     border-radius: 10px;
-    height: 60%;
-    min-width: 500px;
+    min-width: 700px;
+}
+.cdk-virtual-scroll-viewport {
+    display: flex;
+    height: 73vh;
+    width: 100%;
+}
+.cdk-virtual-scroll-content-wrapper {
+    height: 70vh;
 }
 button {
     width: auto;
