removed all bulk componets and related plumbing ; added single-product component; modified shop;

--- a/src/app/components/after-school-product/after-school-product.component.html
+++ b/src/app/components/after-school-product/after-school-product.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel [expanded]="panelOpenState" 
+<!-- <mat-expansion-panel [expanded]="panelOpenState" 
 (opened)="panelOpenState = true" (closed)="panelOpenState = false">
   
   <mat-expansion-panel-header>
@@ -21,4 +21,4 @@
   </mat-card>
   <mat-action-row (click)="closePanel()">{{panelOpenState ? 'close' : 'open'}}</mat-action-row>
 
-</mat-expansion-panel>
+</mat-expansion-panel> -->
