--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div id="grid-container">  
+<!-- <div id="grid-container">  
   
   <div class="button-container">
     <mat-toolbar>Change Items?</mat-toolbar>
@@ -157,4 +157,4 @@
 <mat-select required>
   <mat-label>Something here</mat-label>
   <mat-option [value]="pickUpDate">Whenever</mat-option>
-</mat-select>
+</mat-select> -->
