--- a/src/app/components/choice-product/choice-product.component.html
+++ b/src/app/components/choice-product/choice-product.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel [expanded]="panelOpenState" 
+<!-- <mat-expansion-panel [expanded]="panelOpenState" 
 (opened) ="panelOpenState = true" (closed)="panelOpenState = false">
     
   <mat-expansion-panel-header>
@@ -25,4 +25,4 @@
 
   <mat-action-row (click)="closePanel()">{{panelOpenState ? 'close' : 'open'}}</mat-action-row>
 
-</mat-expansion-panel>
+</mat-expansion-panel> -->
