--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -19,11 +19,8 @@
         <mat-toolbar>Click Below to Shop</mat-toolbar>
         <cdk-virtual-scroll-viewport  itemSize="">
             <ng-container *ngFor="let type of totalTypes" >
-                <app-single-product *ngIf="singlesTypes.includes(type)" [family]="family" [type]="type"></app-single-product>
-                <app-multiple-product *ngIf="multiplesTypes.includes(type)" [family]="family" [type]="type"></app-multiple-product>
+                <app-product-type [family]="family" [type]="type"></app-product-type>
             </ng-container>
-            <!-- <app-after-school-product [family]="family" *ngIf="family.schoolChildren !== 0"></app-after-school-product>
-            <app-meat-product [family]="family"></app-meat-product> -->
         </cdk-virtual-scroll-viewport>     
     </main>
     
