--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -18,7 +18,7 @@
     <main id="middle">
         <mat-toolbar>Click Below to Shop</mat-toolbar>
         <cdk-virtual-scroll-viewport  itemSize="">
-            <ng-container *ngFor="let type of totalTypes" >
+            <ng-container *ngFor="let type of types" >
                 <app-product-type [family]="family" [type]="type"></app-product-type>
             </ng-container>
         </cdk-virtual-scroll-viewport>     
