--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,14 +1,14 @@
- .grid-container {
-   display: grid;
-   grid-template-columns: 70% 30%;
- }
- .info-container {
+.grid-container {
   display: grid;
-  grid-template-columns: 67% auto;
- }
- .points {
-   margin-top: -5%;
- }
+  grid-template-columns: 70% 30%;
+}
+.info-container {
+display: grid;
+grid-template-columns: 67% auto;
+}
+.points {
+  margin-top: -5%;
+}
 .mat-button {
   border: solid black .5px;
   border-radius: 5px;
@@ -16,8 +16,16 @@
   font-size: 22px;
   margin-left: 10%;
 }
+.mat-card {
+  background: rgb(12, 36, 100);
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 ::ng-deep .mat-tooltip {
   background-color: red;
   color: blue;
   font-size: 20px;
+}
+.blah {
+  margin: 0;
 }
