--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,17 +1,24 @@
-<div class="grid-container">
-  <div class="info-container">
-    <span *ngIf="!typeAmountProduct" class="limit" tooltip="Maximum Allowed in the Cart" tooltipPosition="above">{{'Maximum Amount: ' + prodMaxAmount}}</span>  
-    <span class="amount">{{inCart ? amountInCart + ' in Cart' : 'None in Cart' }}</span> 
-  </div>
-  <div> 
-    <ng-container *ngIf="!pointProduct">
-      <button mat-button (click)="removeOne()" [disabled]="!inCart">-</button>
-      <button mat-button (click)="addOne()" [disabled]="atMaxAmount || atTypeMaxAmount">+</button>
-    </ng-container>
-    <ng-container *ngIf="pointProduct">
-      <button mat-button (click)="removeOnePoints()" [disabled]="!inCart">-</button>
-      <button mat-button (click)="addOnePoints()" [disabled]="pointDisabled || atTypeMaxAmount">+</button>
-    </ng-container>
-  </div>
-  <div *ngIf="pointProduct" class="points" matTooltip="The amount of choice points the item costs." matTooltipPosition="below">{{'Choice Points: ' + product.points}}</div>     
-</div>
+<mat-card *ngIf="!product.typeId">
+  <mat-card-title>{{product.productName}}</mat-card-title>
+  <mat-card-content> 
+    <div class="grid-container">
+      <div class="info-container">
+        <span *ngIf="!typeAmountProduct" class="limit" tooltip="Maximum Allowed in the Cart" tooltipPosition="above">{{'Maximum Amount: ' + prodMaxAmount}}</span>  
+        <span class="amount">{{inCart ? amountInCart + ' in Cart' : 'None in Cart' }}</span> 
+      </div>
+      <div> 
+        <ng-container *ngIf="!pointProduct">
+          <button mat-button (click)="removeOne()" [disabled]="!inCart">-</button>
+          <button mat-button (click)="addOne()" [disabled]="atMaxAmount || atTypeMaxAmount">+</button>
+        </ng-container>
+        <ng-container *ngIf="pointProduct">
+          <button mat-button (click)="removeOnePoints()" [disabled]="!inCart">-</button>
+          <button mat-button (click)="addOnePoints()" [disabled]="pointDisabled || atTypeMaxAmount">+</button>
+        </ng-container>
+      </div>
+      <div *ngIf="pointProduct" class="points" matTooltip="The amount of choice points the item costs." matTooltipPosition="below">{{'Choice Points: ' + product.points}}</div>     
+    </div>
+  </mat-card-content>
+</mat-card>   
+<app-product-type *ngIf="product.typeId" [family]="family" [type]="product"></app-product-type>
+
