--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,7 +1,7 @@
-<mat-card *ngIf="!product.typeId">
+<mat-card *ngIf="!product.typeId" [ngClass]="{'sub-product' : subProduct}">
   <mat-card-title>{{product.productName}}</mat-card-title>
   <mat-card-content> 
-    <div class="grid-container">
+    <div class="grid-container" [ngClass]="{'sub-product-grid-container' : subProduct}">
       <div class="info-container">
         <span *ngIf="!typeAmountProduct" class="limit" tooltip="Maximum Allowed in the Cart" tooltipPosition="above">{{'Maximum Amount: ' + prodMaxAmount}}</span>  
         <span class="amount">{{inCart ? amountInCart + ' in Cart' : 'None in Cart' }}</span> 
@@ -16,9 +16,9 @@
           <button mat-button (click)="addOnePoints()" [disabled]="pointDisabled || atTypeMaxAmount">+</button>
         </ng-container>
       </div>
-      <div *ngIf="pointProduct" class="points" matTooltip="The amount of choice points the item costs." matTooltipPosition="below">{{'Choice Points: ' + product.points}}</div>     
+      <div *ngIf="pointProduct" class="points" [ngClass]="{'sub-points' : subProduct}">{{'Choice Points: ' + product.points}}</div>     
     </div>
   </mat-card-content>
 </mat-card>   
-<app-product-type *ngIf="product.typeId" [family]="family" [type]="product"></app-product-type>
+<app-product-type *ngIf="product.typeId" [family]="family" [type]="product" [subType]="subType"></app-product-type>
 
